# hass-weenect

./: .codespell  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  coverage.xml  hacs.json  info.md  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: configuration.yaml  devcontainer.json
.github/scripts/: update_version.py
.github/workflows/: ci.yaml  ci.yml  permissions_advisor.yml  publish.yml
custom_components/weenect/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  device_tracker.py  entity.py  manifest.json  select.py  sensor.py  services.py  services.yaml  util.py
custom_components/weenect/translations/: de.json  en.json  it.json
tests/: README.md  __init__.py  conftest.py  const.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_device_tracker.py  test_init.py  test_select.py  test_sensor.py  test_services.py
