[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hass-weenect"
version = "2.2.0"
description = "Homeassistant Custom Component for Weenect"
license = "MIT"
authors = ["Kevin Stillhammer <kevin.stillhammer@gmail.com>"]
readme = "README.md"
repository = "http://github.com/eifinger/hass-weenect"
keywords = [
    "aiohttp",
    "asyncio",
    "weenect",
    "weenect-api"
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.8"
aioweenect = "1.1.1"

[tool.poetry.dev-dependencies]
black = "22.6.0"
blacken-docs = "^1.12.1"
coverage = {version = "^6.2", extras = ["toml"]}
bandit = "^1.7.2"
codecov = "2.1.12"
codespell = "^2.1.0"
darglint = "^1.8.1"
flake8 = "4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.6.22"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.1"
flake8-markdown = "^0.3.0"
flake8-simplify = "^0.19.2"
mypy = "0.961"
pre-commit = "2.19.0"
pre-commit-hooks = "^4.3.0"
pytest = "6.2.5"
pytest-asyncio = "0.18.3"
pytest-cov = "^2.12.1"
pytest-homeassistant-custom-component = "0.5.14"
pytest-mock = "3.8.1"
pylint = "2.14.3"
pyupgrade = "^2.34.0"
safety = "^1.10.3"
vulture = "^2.4"
yamllint = "^1.26.3"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov=custom_components tests"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "tests"]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "custom_components/weenect/manifest.json:\"version\": \"{version}\""
version_variable = "custom_components/weenect/const.py:VERSION"
build_command = false
upload_to_repository = false
upload_to_release = false
commit_subject = "chore(release): {version}"
branch = "main"
