[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hass-weenect"
version = "3.3.1"
description = "Homeassistant Custom Component for Weenect"
license = "MIT"
authors = ["Kevin Stillhammer <kevin.stillhammer@gmail.com>"]
readme = "README.md"
repository = "http://github.com/eifinger/hass-weenect"
keywords = [
    "aiohttp",
    "asyncio",
    "weenect",
    "weenect-api"
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.10"
aioweenect = "1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
blacken-docs = "^1.16.0"
codespell = "^2.2.6"
mypy = "^1.6.0"
pre-commit = "^3.4.0"
pre-commit-hooks = "^4.5.0"
vulture = "^2.10"
yamllint = "^1.33.0"
ruff = "^0.0.292"
pytest-homeassistant-custom-component = "^0.13.45"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov=custom_components --asyncio-mode=auto tests"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
ignore = ['E501']
line-length = 88
select = [
    'B',
    'B9',
    'C',
    'E',
    'F',
    'W',
]
fix = true

[tool.ruff.mccabe]
max-complexity = 12

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "tests"]

[tool.semantic_release]
version_source = "tag"
commit_version_number = true
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "custom_components/weenect/manifest.json:\"version\": \"{version}\""
version_variable = "custom_components/weenect/const.py:VERSION"
commit_subject = "chore(release): {version}"
build_command = false
upload_to_repository = false
upload_to_release = false
branch = "main"
